# remote_manager

./: CMakeLists.txt  package.xml
src/: remote_manager_node.cpp
